<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="upload">Upload</string>
    <string name="map">Map</string>
    <string name="cam">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="submit">Submit</string>
    <string name="desc">Write Description</string>
    <string name="message_welcome_page">Mau cerita tentang keseharian kamu belajar programming? cerita di Story!</string>
    <string name="title_welcome_page">Selamat datang di Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="test">Test</string>
    <string name="story_app">Story\nApp</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Story.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_8_character">Password minimal 8 karakter></string>
</resources>